@@ -1,3 +1,14 @@
+2010-01-11  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        https://bugs.webkit.org/show_bug.cgi?id=33493
+        Log redirect details to Network channel
+
+        * platform/network/mac/ResourceHandleMac.mm:
+        (-[WebCoreResourceHandleAsDelegate connection:willSendRequest:redirectResponse:]):
+        Log response code and Location header field value. Also, removed a redundant null check.
+
 2010-01-11  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Oliver Hunt.
